tests/ui/not-trait-impl.stderr
error: must be placed on a trait impl
 --> $DIR/not-trait-impl.rs:5:1
  |
5 | #[inherent]
  | ^^^^^^^^^^^
